--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Social Solution Services, Inc</title>
 </head>
 
 <body>
-    <div class="header">
+
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,7 +24,8 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
+
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -48,6 +50,7 @@
             </p>
         </div>
     </div>
+
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
